# steward

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md
crates/atlas_packer/: Cargo.toml
crates/atlas_packer/src/: main.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: activities.rs  actor.rs  agent_tasking.rs  agents.rs  dialog.rs  entities.rs  geom.rs  init.rs  interaction.rs  lib.rs  movement.rs  names.rs  objects.rs  parties.rs  performance_counters.rs  simulation.rs  tasking.rs  terrain_map.rs  view.rs
crates/util/src/: bitset.rs  bucket_sort.rs  lib.rs  segments.rs  span.rs  string_pool.rs  tally.rs  vec_map.rs
src/: assets.rs  board.rs  main.rs  objects.rs
