[package]
name = "steward"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["crates/simulation","crates/util"]

[workspace.dependencies]
bumpalo = { version = "3", features = ["collections"] }
macroquad = "0.4.4"
egui-macroquad = "0.17"
egui = "0.31"
num_enum = "*"
strum = { version = "*", features = ["derive"] }
pathfinding = "*"
rand = { version = "0.8", features = ["small_rng"] }
slotmap = "1"
string-interner = "0.19"
simulation = { path = "crates/simulation" }
util = { path = "crates/util" }


[dependencies]
bumpalo = { workspace = true }
macroquad = { workspace = true }
egui-macroquad = { workspace = true }
egui = { workspace = true }
slotmap = { workspace = true }
simulation = { workspace = true }
util = { workspace = true }

