[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true }
num_enum = { workspace = true }
pathfinding = { workspace = true }
slotmap = { workspace = true }
string-interner = { workspace = true }
strum = { workspace = true }
util = { workspace = true }
