[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true }
fast-voxel-traversal = { workspace = true }
num_enum = { workspace = true }
pathfinding = { workspace = true }
rand = { workspace  = true } 
slotmap = { workspace = true }
string-interner = { workspace = true }
strum = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }
util = { workspace = true }
